log
ju., 27 de mar. de 2025 20:10:06: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
25021aa
ju., 27 de mar. de 2025 20:30:06: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
fe874e1
ju., 27 de mar. de 2025 21:13:18: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
765d801
vi., 28 de mar. de 2025 21:09:45: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:71:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:74:34: error: 'return' with a value, in function returning void [-Werror]
     if(nuevoNodo == NULL) return NULL;
                                  ^~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
db97c84
vi., 28 de mar. de 2025 21:14:56: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
354e316
vi., 28 de mar. de 2025 21:50:54: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:89:41: error: 'return' with a value, in function returning void [-Werror]
     if(!list || !list->current ) return NULL;
                                         ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
list.c:91:11: error: 'data' redeclared as different kind of symbol
     void* data= malloc(sizeof(int));
           ^~~~
list.c:88:38: note: previous definition of 'data' was here
 void pushCurrent(List * list, void * data) {
                                      ^~~~
list.c:92:22: error: 'return' with a value, in function returning void [-Werror]
     if(!data) return NULL;
                      ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
list.c:93:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *(int *)data = temp->data;
                  ^
list.c:97:51: error: statement with no effect [-Werror=unused-value]
         if(list->current == list->tail) list->tail==NULL;
                                                   ^
list.c:106:12: error: 'return' with a value, in function returning void [-Werror]
     return data;
            ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a2b2888
vi., 28 de mar. de 2025 21:51:59: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:89:41: error: 'return' with a value, in function returning void [-Werror]
     if(!list || !list->current ) return NULL;
                                         ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
list.c:91:11: error: 'data' redeclared as different kind of symbol
     void* data= malloc(sizeof(int));
           ^~~~
list.c:88:38: note: previous definition of 'data' was here
 void pushCurrent(List * list, void * data) {
                                      ^~~~
list.c:93:22: error: 'return' with a value, in function returning void [-Werror]
     if(!data) return NULL;
                      ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
list.c:94:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *(int *)data = temp->data;
                  ^
list.c:107:12: error: 'return' with a value, in function returning void [-Werror]
     return data;
            ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
21e7dd8
